2003-04-22  Jeffrey Stedfast  <fejj@ximian.com>

	* providers/imap/camel-imap-store.c (imap_connect_online): #if 0
	out some code that parsed the namespaces since the results aren't
	used and they generate debugging output.

2003-04-23  Not Zed  <NotZed@Ximian.com>

	* camel-session.c (get_service): oops, the service owns the url
	after we construct it.

2003-04-22  Not Zed  <NotZed@Ximian.com>

	** Should fix #41629, #41448, et al.
	
	* tests/folder/test10.c: a new torture test for object bag
	creation/unreffing.

	* camel-url.c (camel_url_copy): new function to copy a url.

	* camel-object.c (camel_object_bag_new): add arguments for key
	copy and key free functions.  Fixed all callers.
	(camel_object_bag_destroy): fix a memleak, free the bag key.
	(camel_object_bag_get, camel_object_bag_reserve)
	(camel_object_bag_abort, save_bag, save_object): Make the key a
	void type, rather than char *.
	(camel_object_bag_add): As above, and also copy the key.
	(camel_object_bag_remove_unlocked): free the key using
	bag->free_key.

	* camel-session.c (register_provider)
	(camel_session_destroy_provider, get_service): Changed to use an
	object bag instead of a hash table for the service 'cache'.
	(service_cache_remove): Removed, no longer required.

2003-04-21  Jeffrey Stedfast  <fejj@ximian.com>

	* camel-gpg-context.c (gpg_ctx_parse_status): Don't set seen_eof1
	here anymore once we get a trust metric.
	(gpg_ctx_new): Init seen_eof1 to TRUE here.
	(gpg_ctx_set_ostream): Change seen_eof1 to FALSE here this way we
	only ever have to set this if we are expecting output.
	(gpg_ctx_parse_status): Don't set seen_eof1 for importing either.
	(gpg_ctx_op_step): Only FD_SET() those fd's that we have not yet
	finished reading.

2003-04-16  Jeffrey Stedfast  <fejj@ximian.com>

	* camel-url-scanner.c (camel_url_web_end): Urls are unlikely to
	end with punctuation or closing braces, so strip any of those off
	the end of the url. Fixes bug #41461.
